--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -7,7 +7,11 @@
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
+
       </ion-nav-buttons>
+      <ion-nav-buttons side="right">
+        <button class="button button-clear button-right" ng-click="username == 'Log In' ? $location.url('app.profile') : login()"> {{username}} </button>
+  </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
