--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -25,7 +25,7 @@
         <ion-item menu-close href="#/app/playlists">
           Playlist
         </ion-item>
-        <ion-item menu-close ng-click="login()">
+        <ion-item menu-close href="#/app/profile">
           Account
         </ion-item>
         <ion-item menu-close href="#/app/charts">
