--- a/www/templates/Profile.html
+++ b/www/templates/Profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<ion-view view-title="{{username}}'s Profile">
+<ion-view view-title="{{username | Username}}'s Profile">
     <ion-content>
     <p>{{username}}</p>
     </ion-content>
