--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -5,6 +5,9 @@
       <button class="button button-clear" ng-click="closeLogin()">Close</button>
     </div>
   </ion-header-bar>
+  <ion-header-bar class = 'bar-subheader'>
+<h1 class="title">{{errorMessage}}</h1>
+  </ion-header-bar>
   <ion-content>
     <form ng-submit="doLogin()">
       <div class="list">
@@ -19,10 +22,11 @@
         <label class="item">
           <button class="button button-block button-positive" type="submit">Log in</button>
         </label>
-      </div>
-    </form>
-    <div >
-      <button class = "button button-positive" ng-click = "openSignUp()"> Need an Account?</button>
-    </div>
-  </ion-content>
+
+</div>
+</form>
+<div >
+  <button class = "button button-positive" ng-click = "openSignUp()"> Need an Account?</button>
+</div>
+</ion-content>
 </ion-modal-view>
