--- a/www/templates/Profile.html
+++ b/www/templates/Profile.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <ion-view view-title="{{username | Username}}'s Profile">
     <ion-content>
-    <p>{{username}}</p>
+        <ion-list>
+            <ion-item class="button button-bar button-positive" ng-click="logOut()">
+            Log Out
+            </ion-item>
+        </ion-list>
     </ion-content>
 </ion-view>
