--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -5,12 +5,14 @@
       <button class="button button-clear" ng-click="closeLogin()">Close</button>
     </div>
   </ion-header-bar>
-  <ion-header-bar class = 'bar-subheader'>
-<h1 class="title">{{errorMessage}}</h1>
-  </ion-header-bar>
+
+
   <ion-content>
     <form ng-submit="doLogin()">
       <div class="list">
+        <label class="item item-assertive" ng-show="error">
+          <h2 class="title"> Error: {{errorMessage}}</h2>
+        </label>
         <label class="item item-input">
           <span class="input-label">Email</span>
           <input type="text" ng-model="loginData.email">
