--- a/www/templates/Profile.html
+++ b/www/templates/Profile.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <ion-view view-title="{{username | Username}}'s Profile">
     <ion-content>
+        <iframe src="https://embed.spotify.com/?uri=spotify:track:4th1RQAelzqgY7wL53UGQt" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
         <ion-list>
             <ion-item class="button button-bar button-positive" ng-click="logOut()">
             Log Out
